--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,11 @@
-<h1>Home</h1>
+<div class="center hero-unit">
+  <h1>Home</h1>
+
+  <h2>
+    This is the home page for the PrayerChain application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
