--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,10 @@
         <%= render 'shared/prayer_request_form' %>
       </section>
     </aside>
+    <div class="span8">
+      <h3>Prayer Request Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
   <div class="center hero-unit">
