--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,28 +1,5 @@
 <% if signed_in? %>
-  <div class="row">
-    <aside class="span4">
-      <section>
-        <%= render 'shared/user_info' %>
-      </section>
-      <section>
-        <%= render 'shared/prayer_request_form' %>
-      </section>
-    </aside>
-    <div class="span8">
-      <h3>Prayer Request Feed</h3>
-      <%= render 'shared/feed' %>
-    </div>
-  </div>
+  <%= render 'static_pages/signed_in' %>
 <% else %>
-  <div class="center hero-unit">
-    <h1>Home</h1>
-
-    <h2>
-      This is the home page for the PrayerChain application.
-    </h2>
-
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-  </div>
-
-  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= render 'static_pages/signup' %>
 <% end %>
